products.find findMany testcase 및 로직 구현
