# swagger.json
@@ -42,7 +42,7 @@
           }
         },
         "description": "상품 목록 조회 API\n\n전체 상품 목록 조회\n\n추후에 쿼리를 통해 가게별, 카테고리별 등의 필터링 기준 추가\n\n추후에 쿼리를 통해 가격 낮은 순/높은 순, 인기 순 등의 정렬 기준 추가",
-        "x-nestia-namespace": "products.getList",
+        "x-nestia-namespace": "products.findMany",
         "x-nestia-jsDocTags": [
           {
             "name": "tag",
@@ -91,7 +91,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/object"
+                "$ref": "#/components/schemas/IProductUsecase.CreateData"
               }
             }
           },
@@ -152,6 +152,29 @@
         ]
       }
     },
+    "/products/total-count": {
+      "get": {
+        "tags": [],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "number",
+                  "nullable": false
+                }
+              }
+            },
+            "x-nestia-encrypted": false
+          }
+        },
+        "description": "",
+        "x-nestia-namespace": "products.total-count.getTotalCount",
+        "x-nestia-jsDocTags": []
+      }
+    },
     "/products/{product_id}": {
       "get": {
         "tags": [
@@ -183,7 +206,7 @@
           }
         },
         "description": "상품 상세 조회 API",
-        "x-nestia-namespace": "products.get",
+        "x-nestia-namespace": "products.find",
         "x-nestia-jsDocTags": [
           {
             "name": "tag",
@@ -222,7 +245,7 @@
           }
         ]
       },
-      "put": {
+      "patch": {
         "tags": [
           "product"
         ],
@@ -243,7 +266,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/object"
+                "$ref": "#/components/schemas/IProductUsecase.UpdateData"
               }
             }
           },
@@ -320,7 +343,7 @@
           }
         ]
       },
-      "patch": {
+      "delete": {
         "tags": [
           "product"
         ],
@@ -336,20 +359,8 @@
             "required": true
           }
         ],
-        "requestBody": {
-          "description": "삭제 대상 상품이 포함된 store의 id",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/object"
-              }
-            }
-          },
-          "required": true,
-          "x-nestia-encrypted": false
-        },
         "responses": {
-          "201": {
+          "200": {
             "description": "",
             "x-nestia-encrypted": false
           }
@@ -379,23 +390,6 @@
               },
               {
                 "text": "삭제 대상 상품의 id",
-                "kind": "text"
-              }
-            ]
-          },
-          {
-            "name": "param",
-            "text": [
-              {
-                "text": "body",
-                "kind": "parameterName"
-              },
-              {
-                "text": " ",
-                "kind": "space"
-              },
-              {
-                "text": "삭제 대상 상품이 포함된 store의 id",
                 "kind": "text"
               }
             ]
@@ -686,59 +680,48 @@
             "x-typia-required": true
           },
           "page": {
-            "type": "number",
+            "type": "integer",
             "nullable": false,
             "description": "now page",
             "x-typia-metaTags": [
               {
+                "kind": "type",
+                "value": "uint"
+              },
+              {
                 "kind": "minimum",
-                "value": 0
+                "value": 1
               }
             ],
             "x-typia-jsDocTags": [
               {
+                "name": "type",
+                "text": [
+                  {
+                    "text": "uint",
+                    "kind": "text"
+                  }
+                ]
+              },
+              {
                 "name": "minimum",
                 "text": [
                   {
-                    "text": "0",
+                    "text": "1",
                     "kind": "text"
                   }
                 ]
               }
             ],
             "x-typia-required": true,
-            "minimum": 0
-          },
-          "total_count": {
-            "type": "number",
-            "nullable": false,
-            "description": "total count of T",
-            "x-typia-metaTags": [
-              {
-                "kind": "minimum",
-                "value": 0
-              }
-            ],
-            "x-typia-jsDocTags": [
-              {
-                "name": "minimum",
-                "text": [
-                  {
-                    "text": "0",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": true,
-            "minimum": 0
+            "minimum": 1,
+            "maximum": 0
           }
         },
         "nullable": false,
         "required": [
           "data",
-          "page",
-          "total_count"
+          "page"
         ],
         "x-typia-jsDocTags": []
       },
@@ -960,10 +943,88 @@
             "x-typia-required": true,
             "minimum": 0
           },
+          "description": {
+            "type": "string",
+            "nullable": false,
+            "description": "상품 설명",
+            "x-typia-required": true
+          },
           "quantity": {
             "type": "number",
             "nullable": false,
             "description": "현재 판매가능한 상품 수량",
+            "x-typia-metaTags": [
+              {
+                "kind": "minimum",
+                "value": 0
+              }
+            ],
+            "x-typia-jsDocTags": [
+              {
+                "name": "minimum",
+                "text": [
+                  {
+                    "text": "0",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": true,
+            "minimum": 0
+          }
+        },
+        "nullable": false,
+        "required": [
+          "created_at",
+          "updated_at",
+          "id",
+          "name",
+          "store_id",
+          "price",
+          "description",
+          "quantity"
+        ],
+        "description": "판매자만 보이는 정보 등을 제거한 상품 상세 정보",
+        "x-typia-jsDocTags": []
+      },
+      "IProductUsecase.CreateData": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": false,
+            "description": "상품명",
+            "x-typia-required": true
+          },
+          "store_id": {
+            "type": "string",
+            "nullable": false,
+            "description": "상품을 판매하는 판매점 id",
+            "x-typia-metaTags": [
+              {
+                "kind": "pattern",
+                "value": "uuid"
+              }
+            ],
+            "x-typia-jsDocTags": [
+              {
+                "name": "pattern",
+                "text": [
+                  {
+                    "text": "uuid",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": true,
+            "pattern": "uuid"
+          },
+          "price": {
+            "type": "number",
+            "nullable": false,
+            "description": "상품 가격(원)",
             "x-typia-metaTags": [
               {
                 "kind": "minimum",
@@ -989,26 +1050,113 @@
             "nullable": false,
             "description": "상품 설명",
             "x-typia-required": true
+          },
+          "quantity": {
+            "type": "number",
+            "nullable": false,
+            "description": "현재 판매가능한 상품 수량",
+            "x-typia-metaTags": [
+              {
+                "kind": "minimum",
+                "value": 0
+              }
+            ],
+            "x-typia-jsDocTags": [
+              {
+                "name": "minimum",
+                "text": [
+                  {
+                    "text": "0",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": true,
+            "minimum": 0
           }
         },
         "nullable": false,
         "required": [
-          "created_at",
-          "updated_at",
-          "id",
           "name",
           "store_id",
           "price",
-          "quantity",
-          "description"
+          "description",
+          "quantity"
         ],
-        "description": "판매자만 보이는 정보 등을 제거한 상품 상세 정보",
         "x-typia-jsDocTags": []
       },
-      "object": {
+      "IProductUsecase.UpdateData": {
         "type": "object",
-        "properties": {},
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": false,
+            "description": "상품명",
+            "x-typia-required": true
+          },
+          "price": {
+            "type": "number",
+            "nullable": false,
+            "description": "상품 가격(원)",
+            "x-typia-metaTags": [
+              {
+                "kind": "minimum",
+                "value": 0
+              }
+            ],
+            "x-typia-jsDocTags": [
+              {
+                "name": "minimum",
+                "text": [
+                  {
+                    "text": "0",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": true,
+            "minimum": 0
+          },
+          "description": {
+            "type": "string",
+            "nullable": false,
+            "description": "상품 설명",
+            "x-typia-required": true
+          },
+          "quantity": {
+            "type": "number",
+            "nullable": false,
+            "description": "현재 판매가능한 상품 수량",
+            "x-typia-metaTags": [
+              {
+                "kind": "minimum",
+                "value": 0
+              }
+            ],
+            "x-typia-jsDocTags": [
+              {
+                "name": "minimum",
+                "text": [
+                  {
+                    "text": "0",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": true,
+            "minimum": 0
+          }
+        },
         "nullable": false,
+        "required": [
+          "name",
+          "price",
+          "description",
+          "quantity"
+        ],
         "x-typia-jsDocTags": []
       },
       "IAuthUsecase.SignInBody": {
